@@ -9,7 +9,8 @@
       location="http://www.freedesktop.org/software/"
       subdir="$module/releases/"
       />
-    <site module="cairo"     location="http://cairographics.org/releases/" />
+    <site module="cairo"     location="http://cairographics.org/snapshots/" />
+          # http://cairographics.org/releases/
     <site module="hal"       location="http://freedesktop.org/~david/dist/" />
     <site module="libXft"    location="http://xlibs.freedesktop.org/release/"/>
     <site module="fontconfig" 
@@ -23,9 +24,14 @@
           location="http://ftp.gnome.org/pub/GNOME/sources/"
           subdir="$module" />
     <site module="shared-mime-info" location="http://freedesktop.org/~jrb/" />
+    <site module="desktop-file-utils"
+          location="http://www.freedesktop.org/software/"
+          subdir="$module/releases" />
     <site module="libxklavier"
           location="http://ftp.gnome.org/pub/GNOME/sources"
           subdir="$module" />
+    <site module="dbus"
+          location="http://dbus.freedesktop.org/releases/" />
     <site module="gstreamer"
           location="http://gstreamer.freedesktop.org/src/gstreamer/" />
     <site module="gst-plugins-base"
