@@ -1,3 +1,10 @@
+2006-05-16  Elijah Newren  <newren gmail com>
+
+	* convert-to-tarballs.py:
+	* tarball-conversion.config:
+	jhbuild format has changed considerably recently; update to match
+	the new format
+
 2006-04-26  Vincent Untz  <vuntz@gnome.org>
 
 	* versions:
